turn off real time plotting default and add in a brief delay for stability

--- a/config/app_config.json
+++ b/config/app_config.json
@@ -1,5 +1,5 @@
 {
-    "realtimePlotEnabled":true,
+    "realtimePlotEnabled":false,
     "advancedSensors":true,
     "forceLaserFail":false,
     "eol_min_mean_per_camera":[130,230,250,280,280,250,230,130],
