add camera temperature alert threshold to the config file

--- a/config/app_config.json
+++ b/config/app_config.json
@@ -2,6 +2,7 @@
     "realtimePlotEnabled":false,
     "advancedSensors":true,
     "forceLaserFail":false,
+    "cameraTempAlertThresholdC":90,
     "eol_min_mean_per_camera":[130,230,250,280,280,250,230,130],
     "eol_min_contrast_per_camera":[0.25,0.25,0.25,0.25,0.25,0.25,0.25,0.25]
 }
