--- a/config/app_config.json
+++ b/config/app_config.json
@@ -3,6 +3,7 @@
     "advancedSensors":true,
     "forceLaserFail":false,
     "cameraTempAlertThresholdC":90,
+    "output_path":"D:\\bloodflow",
     "eol_min_mean_per_camera":[130,230,250,280,280,250,230,130],
     "eol_min_contrast_per_camera":[0.25,0.25,0.25,0.25,0.25,0.25,0.25,0.25]
 }
