--- a/config/app_config.json
+++ b/config/app_config.json
@@ -1,8 +1,10 @@
 {
-    "realtimePlotEnabled":false,
-    "advancedSensors":true,
-    "forceLaserFail":false,
-    "cameraTempAlertThresholdC":90,
-    "eol_min_mean_per_camera":[130,230,250,280,280,250,230,130],
-    "eol_min_contrast_per_camera":[0.25,0.25,0.25,0.25,0.25,0.25,0.25,0.25]
+  "realtimePlotEnabled": false,
+  "advancedSensors": true,
+  "forceLaserFail": false,
+  "cameraTempAlertThresholdC": 90,
+  "sensorDebugLogging": true,
+  "cameraFakeData": false,
+  "eol_min_mean_per_camera": [130, 230, 250, 280, 280, 250, 230, 130],
+  "eol_min_contrast_per_camera": [0.25, 0.25, 0.25, 0.25, 0.25, 0.25, 0.25, 0.25]
 }
