--- a/config/app_config.json
+++ b/config/app_config.json
@@ -5,7 +5,7 @@
   "cameraTempAlertThresholdC": 90,
   "sensorDebugLogging": true,
   "cameraFakeData": false,
-  "histoThrottle": true,
+  "histoThrottle": false,
   "eol_min_mean_per_camera": [130, 230, 250, 280, 280, 250, 230, 130],
   "eol_min_contrast_per_camera": [0.25, 0.25, 0.25, 0.25, 0.25, 0.25, 0.25, 0.25]
 }
